# Aix_backend

./: .env  .gitignore  CiscoConfASA.txt  README.md  app.py  exceltopdf.py  fortinet_2.conf  logging_config.py  main.py  paloalto_2.xml  paloalto_config.xml  pyproject.toml  requirements.txt  tempCodeRunnerFile.py  vendor_identifier.py
firewall_analyzer/auditor/: address_auditor.py  base.py  device_auditor.py  nat_auditor.py  rule_auditor.py  service_auditor.py
firewall_analyzer/models/: audit_result_models.py  firewall_models.py
firewall_analyzer/orchestrator/: base.py  cisco_orchestrator.py  fortinet_orchestrator.py  palotalto_orchestrator.py
firewall_analyzer/parser/: base.py
firewall_analyzer/parser/cisco/: cisco_asa_parser.py
firewall_analyzer/parser/paloalto/: paloalto_panos_parser.py
firewall_analyzer/reporter/: base.py  excel_reporter.py  html_reporter.py  report_template.html
report_output/Admin/: randomized_config_20250217_1948_report.xlsx  randomized_config_20250217_1949_report.xlsx
report_output/Yash_1411/: paloalto_config_20250218_1149_report.xlsx  randomized_config_20250218_1152_report.xlsx
report_output/jaimeetadmin/: randomized_config_20250112_1134_report.xlsx  randomized_config_20250113_1029_report.xlsx  randomized_config_20250113_1842_report.xlsx
report_output/jaimeetuser/: randomized_config_20250113_1850_report.xlsx
tests/: test_models_addresses.py  test_models_nat.py  test_models_rules.py  test_models_services.py  test_parser_cisco.py  test_parser_paloalto.py
tests/data/: asa.txt  paloalto.xml
uploads/report_output/: summary.txt
(+1 files in other folders)
